--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,70 @@
-node_modules
+# ===============================
+# Next.js
+# ===============================
+.next/
+out/
+build/
+
+# ===============================
+# Node
+# ===============================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# ===============================
+# Environment variables
+# ===============================
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# ===============================
+# Logs
+# ===============================
+logs/
+*.log
+
+# ===============================
+# OS
+# ===============================
+.DS_Store
+Thumbs.db
+
+# ===============================
+# Editor / IDE
+# ===============================
+.vscode/
+!.vscode/extensions.json
+.idea/
+*.swp
+*.swo
+
+# ===============================
+# TypeScript
+# ===============================
+*.tsbuildinfo
+
+# ===============================
+# ESLint
+# ===============================
+.eslintcache
+
+# ===============================
+# Turborepo
+# ===============================
+.turbo/
+
+# ===============================
+# Coverage
+# ===============================
+coverage/
+
+# ===============================
+# Misc
+# ===============================
+.vercel
